Fixed text being covered on character name tag

--- a/client/src/components/CharacterSheet/styles.css
+++ b/client/src/components/CharacterSheet/styles.css
@@ -49,12 +49,13 @@
 
 .nameDragonTail{
   position:absolute;
-  right:10px;
+  right:5px;
   bottom:9px;
   width:94px;
   height:35px;
   background-image:url(./dragonTail.svg);
   background-size: contain;
+  z-index: 1;
 }
 
 input, .input{
@@ -73,6 +74,11 @@ input, .input{
   margin-bottom:1px;
 }
 
+.rolls{
+  border-radius: 15px 0px 0px 0px!important;
+  margin-top:-9px;
+}
+
 .marginFix{
   padding:7px;
 }
@@ -80,3 +86,15 @@ input, .input{
 .checkMargin{
   margin-left:3px;
 }
+
+.coverFix{
+  font-weight:900;
+  position:relative;
+  z-index: 2;
+  color:444;
+  -webkit-text-fill-color: #444; /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: .4px;
+  -webkit-text-stroke-color: white;
+  text-shadow:0px 0px 3px #fff;
+}
+
